--- a/ServerApp/appsettings.json
+++ b/ServerApp/appsettings.json
@@ -1,18 +1,21 @@
 {
-  "Logging": {
-    "IncludeScopes": false,
-    "Debug": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    },
-    "Console": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    }
-  },
-  "ConnectionStrings": {
-    "WishContext": "Server=(localdb)\\mssqllocaldb;Database=WishContext-3e55456b-52a2-45ed-9436-e83ff9fbb461;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+	"Logging": {
+		"IncludeScopes": false,
+		"Debug": {
+			"LogLevel": {
+				"Default": "Warning"
+			}
+		},
+		"Console": {
+			"LogLevel": {
+				"Default": "Warning"
+			}
+		}
+	},
+	"ConnectionStrings": {
+		"WishContext": "Server=(localdb)\\mssqllocaldb;Database=WishContext-3e55456b-52a2-45ed-9436-e83ff9fbb461;Trusted_Connection=True;MultipleActiveResultSets=true"
+	},
+	"JwtKey": "p88cTPyRdM0I2zZuBDdDoh1YLTh990mFGWMiP2XU",
+	"JwtIssuer": "localhost",
+	"JwtExpireDays": 30
 }
