--- a/ServerApp/appsettings.json
+++ b/ServerApp/appsettings.json
@@ -13,7 +13,7 @@
 		}
 	},
 	"ConnectionStrings": {
-		"WishContext": "Server=(localdb)\\mssqllocaldb;Database=WishContext-3e55456b-52a2-45ed-9436-e83ff9fbb461;Trusted_Connection=True;MultipleActiveResultSets=true"
+		"WishContext": "Server=(localdb)\\mssqllocaldb;Database=WishContext;Trusted_Connection=True;MultipleActiveResultSets=true"
 	},
 	"JwtKey": "p88cTPyRdM0I2zZuBDdDoh1YLTh990mFGWMiP2XU",
 	"JwtIssuer": "localhost",
