--- a/ClientApp/ClientApp.csproj
+++ b/ClientApp/ClientApp.csproj
@@ -100,9 +100,12 @@
     <Compile Include="DataService\FakeService.cs" />
     <Compile Include="DataService\SettingsService.cs" />
     <Compile Include="Models\Notification.cs" />
-    <Compile Include="ViewModels\EditAccountViewModel.cs" />
-    <Compile Include="ViewModels\RegisterViewModel.cs" />
-    <Compile Include="ViewModels\ResetPasswordViewModel.cs" />
+    <Compile Include="ViewModels\Account\ChangePasswordViewModel.cs" />
+    <Compile Include="ViewModels\Account\EditAccountViewModel.cs" />
+    <Compile Include="ViewModels\Account\ForgotPasswordViewModel.cs" />
+    <Compile Include="ViewModels\Account\LoginViewModel.cs" />
+    <Compile Include="ViewModels\Account\RegisterViewModel.cs" />
+    <Compile Include="ViewModels\Account\ResetPasswordViewModel.cs" />
     <Compile Include="Views\ForgotPasswordDialog.xaml.cs">
       <DependentUpon>ForgotPasswordDialog.xaml</DependentUpon>
     </Compile>
