Add Simple UserDetailsDialog

--- a/ClientApp/ClientApp.csproj
+++ b/ClientApp/ClientApp.csproj
@@ -125,6 +125,9 @@
     <Compile Include="Views\SubscribersList.xaml.cs">
       <DependentUpon>SubscribersList.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\UserDetailsDialog.xaml.cs">
+      <DependentUpon>UserDetailsDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\UserPage.xaml.cs">
       <DependentUpon>UserPage.xaml</DependentUpon>
     </Compile>
@@ -227,6 +230,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\SubscribersList.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\UserDetailsDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
