--- a/ClientApp/ClientApp.csproj
+++ b/ClientApp/ClientApp.csproj
@@ -100,6 +100,7 @@
     <Compile Include="DataService\RealService.cs" />
     <Compile Include="DataService\FakeService.cs" />
     <Compile Include="DataService\SettingsService.cs" />
+    <Compile Include="Helpers\PrintablePage.cs" />
     <Compile Include="Models\Notification.cs" />
     <Compile Include="ViewModels\Account\ChangePasswordViewModel.cs" />
     <Compile Include="ViewModels\Account\EditAccountViewModel.cs" />
