--- a/ClientApp/ClientApp.csproj
+++ b/ClientApp/ClientApp.csproj
@@ -101,6 +101,7 @@
     <Compile Include="DataService\FakeService.cs" />
     <Compile Include="DataService\SettingsService.cs" />
     <Compile Include="Helpers\PrintablePage.cs" />
+    <Compile Include="Helpers\TimeConverter.cs" />
     <Compile Include="Models\Notification.cs" />
     <Compile Include="ViewModels\Account\ChangePasswordViewModel.cs" />
     <Compile Include="ViewModels\Account\EditAccountViewModel.cs" />
